--- a/FFImageLoadingTransformationIssue/FFImageLoadingTransformationIssue/MainPage.xaml
+++ b/FFImageLoadingTransformationIssue/FFImageLoadingTransformationIssue/MainPage.xaml
@@ -5,6 +5,7 @@
              xmlns:ff="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
              xmlns:ffTransformations="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations"
              xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
+             xmlns:imgcrop="clr-namespace:DLToolkit.Forms.Controls;assembly=DLToolkit.Forms.Controls.ImageCropView"
              BackgroundColor="Red">
 
     <ScrollView>
@@ -42,6 +43,12 @@
                     <ffTransformations:CircleTransformation />  
                 </ff:CachedImage.Transformations>  
             </ff:CachedImage>
+            <imgcrop:ImageCropView HeightRequest="50" WidthRequest="50" x:Name="cropView"
+                    Source="https://tinyurl.com/qph49y4">
+                    <imgcrop:ImageCropView.PreviewTransformations>
+                        <ffTransformations:CircleTransformation />
+                    </imgcrop:ImageCropView.PreviewTransformations>
+            </imgcrop:ImageCropView>
             <Button x:Name="ResizePic" Text="Resize Photo" HeightRequest="50" WidthRequest="120" HorizontalOptions="Center" VerticalOptions="Center"
                     BackgroundColor="White" TextColor="Blue"> </Button>
              <Button x:Name="Monochrome" Text="Monochrome Photo" HeightRequest="50" WidthRequest="120" HorizontalOptions="Center" VerticalOptions="Center"
